--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -68,9 +68,9 @@
                                 <i class="far fa-link"></i>
                             </a>
                         </td>
-                        <td class="center" focus.delegate="prepare_mail(item)">
+                        <td class="center">
                             <a class="resp-sharing-button__link"
-                                href="mailto:?subject=${item.title}&body=${group_mail_url}" target="_blank"
+                                href="mailto:?subject=${item.title}&body=${item.mail_url}" target="_blank"
                                 rel="noopener">
                                 <i class="far fa-envelope"></i>
                             </a>
