--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -47,15 +47,15 @@
                                 value.bind="status_record.photo_name" t="[placeholder]groups.photo-name">
                         </div>
                         <div class="form-group" if.bind="status_record.photo_uploaded">
-                            <textarea t="[placeholder]groups.photo-story" rows="6" value.bind="photo_story"
+                            <textarea t="[placeholder]groups.photo-story" rows="6" value.bind="status_record.photo_story"
                                 id="photo-story" name="photo-story" style="background-color: lightblue;">
                             </textarea>
                         </div>
                         <button name="save-story" click.trigger="save_photo_story()" class="btn btn-info btn-block"
-                            if.bind="status_record.photo_uploaded" disabled.bind="! photo_story">
+                            if.bind="status_record.photo_uploaded" disabled.bind="! status_record.photo_story">
                             ${"groups.save-photo-story" & t}
                         </button>
-                        <div class="form-group" if.bind="status_record.photo_uploaded" style="margin-top:12px;">
+                        <div class="form-group" if.bind="status_record.photo_details_saved" style="margin-top:12px;">
                             <button name="next" click.trigger="next_photo()" class="btn btn-info btn-block">
                                 <!-- disabled.bind="missing_fields"> -->
                                 ${"groups.next-photo" & t}
