--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -43,19 +43,40 @@
                             </button>
                         </div>
                         <div class="form-group" if.bind="status_record.photo_uploaded" style="margin-bottom: 12px;">
-                            <input type="text" name="photo_name" id="photo_name" class="form-control input-sm"
-                                value.bind="status_record.photo_name" t="[placeholder]groups.photo-name">
+                            <input type="text" class="form-control input-sm"
+                                value.bind="status_record.photo_info.photographer_name" t="[placeholder]groups.photographer-name">
+                        </div>
+                        <div class="form-group" if.bind="status_record.photo_uploaded" style="margin-bottom: 12px;">
+                                <input type="text" name="photo_name" id="photo_name" class="form-control input-sm"
+                                    value.bind="status_record.photo_info.photo_name" t="[placeholder]groups.photo-name">
+                            </div>
+                            <div if.bind="status_record.photo_uploaded">
+                            <date-range label="photos.photo-date" range_options.bind="[1,2,3,5,6,7,10,14,30]"
+                                base_date_str.bind="status_record.photo_info.photo_date_str"
+                                hide_label_if_no_date.bind="false" enable_days_range.bind="true"
+                                span_size.bind="status_record.photo_info.photo_date_datespan">
+                            </date-range>
                         </div>
                         <div class="form-group" if.bind="status_record.photo_uploaded">
-                            <textarea t="[placeholder]groups.photo-story" rows="6" value.bind="status_record.photo_story"
-                                id="photo-story" name="photo-story" style="background-color: lightblue;">
+                            <textarea t="[placeholder]groups.photo-story" rows="8"
+                                value.bind="status_record.photo_info.photo_story" id="photo-story" name="photo-story"
+                                style="background-color: lightblue;">
                             </textarea>
                         </div>
-                        <button name="save-story" click.trigger="save_photo_story()" class="btn btn-info btn-block"
-                            if.bind="status_record.photo_uploaded" disabled.bind="! status_record.photo_story">
-                            ${"groups.save-photo-story" & t}
-                        </button>
-                        <div class="form-group" if.bind="status_record.photo_details_saved" style="margin-top:12px;">
+                        <div style="display:flex;justify-content:space-between">
+                            <button name="save-story" click.trigger="save_photo_info()" class="btn btn-sm btn-info"
+                                if.bind="status_record.photo_uploaded"
+                                disabled.bind="missing_photo_info || ! dirty">
+                                ${"groups.save-photo-story" & t}
+                            </button>
+                            <button name="cancel-story" click.trigger="cancel_changes()" class="btn btn-sm btn-warning"
+                                if.bind="status_record.photo_uploaded"
+                                disabled.bind="! dirty">
+                                ${"groups.cancel-changes" & t}
+                            </button>
+                        </div>
+                        <div class="form-group" if.bind="status_record.photo_details_saved" style="margin-top:12px;"
+                            disabled.bind="dirty ? 'diabled' : ''">
                             <button name="next" click.trigger="next_photo()" class="btn btn-info btn-block">
                                 <!-- disabled.bind="missing_fields"> -->
                                 ${"groups.next-photo" & t}
