--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -1,8 +1,8 @@
 <template>
-    <form class="form-inline date-range" dir="${theme.rtltr}" style="position:relative1;height:34px;" onsubmit="return false;">
-        <label if.bind="show_label">${label & t}</label>
-        <div if.bind="show_edit_end_date" class="form-group" style="margin-right:0px;position:absolute1;top:0;left:87px;float:left; ">
-            <select value.bind="span_size" style="height:1.8em;color:black;width:74px;" change.delegate="span_size_changed($event)">
+    <form class="form-inline date-range" dir="${theme.rtltr}" style="height:34px;font-size:90%;" onsubmit="return false;">
+        <label if.bind="show_label" style="font-size:12px;padding-top:3px;">${label & t}</label>
+        <div if.bind="show_edit_end_date" class="form-group" style="margin-right:0px;top:0;left:87px;float:left; ">
+            <select value.bind="span_size" style="height:1.8em;color:black;width:80px;" change.delegate="span_size_changed($event)">
                 <option repeat.for="option of end_date_options" model.bind="option.value">${option.name}</option>
             </select>
         </div>
@@ -12,10 +12,10 @@
             <span style="padding:0;margin:0;float:left;">-</span>
         </div>
 
-        <div if.bind="user.editing" class="form-group" style="margin-right:0px;width:61px;position:absolute1;float:left;top:0;left:0;">
+        <div if.bind="user.editing" class="form-group" style="margin-right:0px;width:61px;float:left;top:0;left:0;">
             <input type="text" value.bind="base_date_str" maxlength="10"
                 title.bind="hint" 
-                style="width:80px;padding-left:4px;padding-right:0;color:black;direction:ltr;margin-right:-18px;" 
+                style="width:70px;padding-left:2px;padding-right:0;color:black;direction:ltr;margin-right:-8px;" 
                 change.trigger="base_date_changed($event)" 
                 keypress.trigger="keep_only_good_chars($event)" />
         </div>
