--- a/src/resources/elements/chats/chatroom-group.html
+++ b/src/resources/elements/chats/chatroom-group.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./chats.css"></require>
-    <div class="row" dir="${theme.rtltr}" >
+    <div class="rowxx" dir="${theme.rtltr}" >
         <div class="col-md-4">
         </div>
         <div class="col-md-1" style="padding-top:5px;">
@@ -31,7 +31,7 @@
             </a>
         </div>
     </div>
-    <div class="row">
+    <div class="row messages-area" style="margin-left:0px;margin-right:0px;">
         <div class="col-md-12">
             <div repeat.for="chatroom of chatrooms">
                 <chatroom 
