--- a/src/resources/elements/chats/chatroom.html
+++ b/src/resources/elements/chats/chatroom.html
@@ -1,10 +1,24 @@
 <template>
-    <div style="background-color: lightgray;">
+    <div css="background-color: lightgray;height:${theme.height-129}px" class="chatroom">
         <div style="padding:16px;">
-            <div css="float:${theme.same_dir};direction:${theme.rtltr};">
-                <h4 css="width:100%;">${chatroom_name}</h4>
+            <div style="display:flex;justify-content:space-between;align-items:flex-start;">
+                <div css="float:${theme.same_dir};direction:${theme.rtltr};" if.bind="!editing">
+                    <h4 style="width:100%;margin:0;">${chatroom_name}</h4>
+                </div>
+                <div if.bind="editing">
+                    <input style="font-size: 95%;margin-bottom:3px;float: left;width: 200px;height:28px;" dir="rtl"
+                        type="text" value.bind="chatroom_name" placeholder="Enter chatroom name"
+                        class="form-control input-small" />
+                </div>
+                <div style="cursor:pointer;">
+                    <i class="fas fa-trash" if.bind="user.privileges.CHAT_MODERATOR"
+                        click.delegate="delete_chatroom()"></i>
+                    <i class="fas fa-pencil" if.bind="user.privileges.CHAT_MODERATOR && ! editing"
+                        click.delegate="edit_chatroom_name()"></i>
+                    <i class="fas fa-save" if.bind="editing" click.delegate="save_chatroom_name()"></i>
+                </div>
             </div>
-            <div >
+            <div if.bind="messages.length > 5">
                 <form class="form-horizontal" role="form">
                     <input css="font-size: 95%;margin-bottom:3px;width: 100%;" dir="${theme.rtltr}" type="text"
                         value.bind="messages_filter" t="[placeholder]chats.enter-search-words"
@@ -12,20 +26,20 @@
                 </form>
             </div>
         </div>
-        <div class="row">
+        <div class="rowxx">
             <div class="col-sm-12" scroll-glue
-                css="padding:10px;height:${theme.height-411}px;overflow:auto;direction:${theme.rtltr};"
+                css="padding:10px;height:${theme.height-311}px;overflow:auto;direction:${theme.rtltr};"
                 ref="scroll_area">
                 <ul class="${theme.rtltr}">
                     <li repeat.for="msg of messages | filter: messages_filter : 'message' : 'sender_name'"
                         class="chat-message">
-                        <span style="font-weight:bold;">${msg.timestamp}: ${msg.sender_name}
+                        <span style="font-weight:bold;display:flex;justify-content:space-between;">${msg.timestamp}: ${msg.sender_name}
                             <span if.bind="user.privileges.CHAT_MODERATOR"
-                                style="float:left;margin-left:30px;cursor:pointer;">
-                                <i class="fas fa-pencil" click.delegate="edit_message(msg, $index)"></i>
+                                style="margin-left:10px;cursor:pointer;">
                                 <i class="fa fa-trash" click.delegate="delete_message(msg, $index)"></i>
+                                <i class="fas fa-pencil" click.delegate="edit_message(msg, $index)"></i>
                             </span>
-                        </span><br />
+                        </span>
                         <span if.bind="msg.id != edited_message_id" innerhtml.bind="msg.message"></span>
                         <textarea if.bind="msg.id == edited_message_id" rows="3"
                             css="direction:${theme.rtltr};width:100%;" change.delegate="save_edited_message(msg)"
@@ -34,8 +48,8 @@
                 </ul>
             </div>
         </div>
-        <div class="row" if.bind="! readonly">
-            <div class="col-md-12">
+        <div class="rowxx" if.bind="! readonly">
+            <div class="col-md-12" style="padding:0;">
                 <form role="form" style="padding:12px;">
                     <textarea rows="3" t="[placeholder]chats.enter-your-message"
                         css="direction:${theme.rtltr};width:100%;" dir="${theme.rtltr}"
