--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -59,8 +59,7 @@
                         </div>
                         <div class="form-group" if.bind="status_record.photo_uploaded">
                             <textarea t="[placeholder]groups.photo-story" rows="8"
-                                value.bind="status_record.photo_info.photo_story" id="photo-story" name="photo-story"
-                                style="background-color: lightblue;">
+                                value.bind="status_record.photo_info.photo_story" id="photo-story" name="photo-story">
                             </textarea>
                         </div>
                         <div style="display:flex;justify-content:space-between">
