--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -113,7 +113,7 @@
                     </ul>
 
                 </div>
-                <div class="col-md-4 col-sm-12" if.bind="theme.is_desktop || editing_filters" id="story-filters" style="height:600px;overflow:auto;">
+                <div class="col-md-4 col-sm-12" if.bind="theme.is_desktop || editing_filters" id="story-filters" css="height:${panel_height}px;overflow:auto;">
                     <div class="row" style="position:relative;">
                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
                         <help if.bind="phase == 'not-editing'" topic="tags" position="bottom" style="position:absolute;left:0px;top:26px;"></help>
