--- a/src/photos/face-info.html
+++ b/src/photos/face-info.html
@@ -11,19 +11,19 @@
             </button>
             <table style="width:100%;margin-left:auto;margin-right:auto;">
                 <tr>
-                  <td><i class="fas fa-expand-alt" click.delegate="change_radius('bigger')"></i></td>
-                  <td><i class="fas fa-play fa-rotate-270" click.delegate="move_face('up')"></i></td>
-                  <td><i class="fas fa-compress-alt fa-rotate-90" click.delegate="change_radius('smaller')"></i></td>
+                  <td><i class="fas fa-expand" click.delegate="change_radius('bigger')" t="[title]photos.larger" style="color:grey;"></i></td>
+                  <td><i class="fas fa-arrow-up" click.delegate="move_face('up')"></i></td>
+                  <td><i class="fas fa-compress" click.delegate="change_radius('smaller')" t="[title]photos.smaller" style="color:grey;"></i></td>
                 </tr>
                 <tr>
-                  <td><i class="fas fa-play" click.delegate="move_face('right')"></i></td>
+                  <td><i class="fas fa-arrow-up fa-rotate-90" click.delegate="move_face('right')"></i></td>
                   <td><i class="fas fa-save" click.delegate="save_face_location()"></i></td>
-                  <td><i class="fas fa-play fa-rotate-180" click.delegate="move_face('left')"></i></td>
+                  <td><i class="fas fa-arrow-up fa-rotate-270" click.delegate="move_face('left')"></i></td>
                 </tr>
                 <tr>
-                  <td><i class="fas fa-compress-alt fa-rotate-90" click.delegate="change_radius('smaller')"></i></td>
-                  <td><i class="fas fa-play fa-rotate-90" click.delegate="move_face('down')"></i></td>
-                  <td><i class="fas fa-expand-alt" click.delegate="change_radius('bigger')"></i></td>
+                  <td></td>
+                  <td><i class="fas fa-arrow-up fa-rotate-180" click.delegate="move_face('down')"></i></td>
+                  <td></td>
                 </tr>
               </table>
         </ux-dialog-body>
