editing mode was destroyed.

--- a/src/photos/face-info.html
+++ b/src/photos/face-info.html
@@ -17,7 +17,7 @@
                 </tr>
                 <tr>
                   <td><i class="fas fa-arrow-up fa-rotate-90" click.delegate="move_face('right')"></i></td>
-                  <td><i class="fas fa-save" click.delegate="save_face_location()"></i></td>
+                  <td><i class="fas fa-save" click.delegate="save_face_location()" style="color:grey;" t="[title]photos.save"></i></td>
                   <td><i class="fas fa-arrow-up fa-rotate-270" click.delegate="move_face('left')"></i></td>
                 </tr>
                 <tr>
