--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -26,7 +26,7 @@
                                     ${'photos.photos-were-selected' & t}</h4>
                                 <div style="padding-left:191px">
                                     <button style="margin-left:auto; margin-right:auto;width:150px;" type="submit"
-                                        class="btn btn-success">${'photos.save' & t}</button>
+                                        class="btn btn-success">${'photos.send' & t}</button>
                                 </div>
                             </div>
                             <div style="padding-left:175px;margin-top:16px;" if.bind="! working">
